deploy cover merge
Signed-off-by: cutecutecat <starkind1997@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,5 @@
+name: Golang test
+
 on:
   pull_request:
     branches: [main]
@@ -8,8 +10,7 @@ jobs:
     strategy:
       matrix:
         go-version:
-        - 1.13.x
-        - 1.14.x
+        - 1.18.x
         platform:
         - ubuntu-latest
         - macos-latest
@@ -24,6 +25,7 @@ jobs:
     - name: Test
       run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
     - name: Report coverage
+      if: ${{ matrix.platform == 'ubuntu-latest' }}
       uses: codecov/codecov-action@v1
       with:
         file: coverage.txt
